--- a/style.css
+++ b/style.css
@@ -1,1 +1,28 @@
-style.css
+.name-highlight{
+    color: orange;
+}
+
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg, lightsalmon,tomato);
+    color:white;
+    margin: 1%;
+    padding: 10px 20px;
+    border-radius: 10px;
+    font-weight: bold;
+}
+.half-width{
+    width: 40%;
+    float: left;
+    margin: 30px;
+}
+.half-width img{
+    width: 100%;
+}
+section{
+    height: 500px;
+    padding-bottom: 100px;
+}
+body{
+    margin: 0%;
+}
