--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 }
 section{
     height: 400px;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
 }
 body{
     margin: 0%;
@@ -72,19 +72,17 @@ p{
     height: 10px;
     bottom: 0;
     padding: 4;
-    
+    position: relative;
     
 }
 .footer{
 
     left: 0;
     bottom: 0;
-    /* width: 100%; */
     display: block;
     text-align: center;
-    /* position: relative; */
-    padding: 10%;
-    
+    position: relative;
+    padding: 10%;        
 }
 .project-text{
  text-align: center;
@@ -92,6 +90,8 @@ p{
 .footer-align{
    text-align: center;
 }
+
 .bonus-part{
     text-align: center;
+    
 }
